# okku-cli

./: Cargo.toml  README.md
src/: main.rs
src/lib/: config.rs  io.rs  mod.rs  run.rs  utils.rs
src/lib/api/: api.rs  mod.rs  utils.rs
src/lib/api/http/: mod.rs  responses.rs
src/lib/api/http/client/: client.rs  error.rs  from_url.rs  mod.rs
src/lib/api/ws/: mod.rs
src/lib/entity/: chat.rs  message.rs  mod.rs  profile.rs  proto.rs
src/lib/ui/: events.rs  messages.rs  mod.rs  text_field.rs
