[package]
name = "okku_cli"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "okku_cli"
path = "src/main.rs"

[lib]
name = "okku"
path = "src/lib/mod.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.13"
