[package]
name = "okku_cli"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "okku_cli"
path = "src/main.rs"

[lib]
name = "okku"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http-auth-basic = "0.1"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.13"
uuid = { version = "0.8", features = ["serde", "v4"] }
